docs: 补充docker部署说明